# the_os

./: .gitignore  Cargo.toml  build.py  build.rs
.cargo/: config.toml
src/: lib.rs  main.rs
src/display/: framebuffer.rs  mod.rs  serial.rs  text.rs
src/interrupts/: idt.rs  mod.rs  tss.rs
